testsuite/tests/overloadedrecflds/should_fail/T26391.stderr
T26391.hs:9:5: error: [GHC-14392]
    Invalid record update.
    No constructor in scope has all of the following fields:
      ‘getSum’, ‘getProduct’

